[package]
name = "lstc-calendar"
description = "Calendar classification system, which applies meaning to dates such as Christmas day or Weekday and Weekend, etc."
repository = "https://github.com/letsseethecode/lstc-calendar.git"
license-file = "LICENSE"
readme = "README.md"
version = "0.1.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.196", features = ["serde_derive"] }

[dev-dependencies]
test-case = "3.3.1"
